[project]
name = "supply-chain-digital-enablement-demo"
version = "0.1.0"
description = "Streamlit demo for planning, visibility, and execution product leadership portfolio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.43.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "plotly>=6.0.0"
]

[tool.uv]
package = false
